--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,13 @@ header {
     margin-top: 16px;
     text-transform: uppercase;
     font-weight: bold ;
+    padding: 0 50px;
     
+}
 
+.header-nav > a {
+    text-decoration: none;
+    color: black;
 
 }
 
@@ -44,8 +49,16 @@ header {
 
 }
 
+.header-icon-bar > a {
+    color: black;
+}
+
 main {
     display: inline-block;
     width: 1200px;
     margin-left: calc(50% - 600px);
+}
+
+.main-img {
+
 }
