--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ body * {
 
 body {
     background-color: rgb(229, 230, 247);
-    background-image: url(../img/background.jpg);
+    background-image: url(../img/background2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -55,6 +55,7 @@ header {
     color: rgb(255, 255, 255);
     line-height: 35px;
     margin-right: 40px;
+    -webkit-text-stroke: rgba(134, 134, 134, 0.493) 1px;
 
 }
 
@@ -75,6 +76,7 @@ header {
     display: inline-block;
     color: rgb(255, 255, 255);
     padding-left: 15px;
+    -webkit-text-stroke: 1px rgba(134, 134, 134, 0.493);
 
 }
 
@@ -87,6 +89,14 @@ main {
     width: 1200px;
     margin-left: calc(50% - 600px);
     position: relative;
+}
+
+.shoe-numbers {
+    position: absolute;
+    top: 60px;
+    right: 100px;
+    font-size: 170px;
+    color: #bb051d41;
 }
 
 .text-block {
@@ -122,6 +132,10 @@ main {
 
 }
 
+.button:hover {
+    background-color: black;
+}
+
 span {
 
 }
@@ -136,8 +150,7 @@ span {
 }
 
 .main-img {
-    position: absolute;
-    height: 500px;
+    height: 380px;
     margin-left: 100px;
     margin-top: 100px;
 
