--- a/css/main2.css
+++ b/css/main2.css
@@ -89,6 +89,14 @@ main {
     position: relative;
 }
 
+.shoe-numbers {
+    position: absolute;
+    top: 60px;
+    right: 100px;
+    font-size: 170px;
+    color: #bb051d41;
+}
+
 .text-block {
     position: absolute;
     width: 500px;
@@ -119,11 +127,10 @@ main {
     text-decoration: none;
     text-transform: uppercase;
     color: white;
-
 }
 
-span {
-
+.button:hover {
+    background-color: black;
 }
 
 .arrow-button {
@@ -136,8 +143,7 @@ span {
 }
 
 .main-img {
-    position: absolute;
-    height: 500px;
+    height: 380px;
     margin-left: 100px;
     margin-top: 100px;
 
